--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,46 @@
-Werkzeug==0.14.1
+attrdict==2.0.0
+base58==1.0.2
+certifi==2018.10.15
+chardet==3.0.4
+Click==7.0
+cytoolz==0.9.0.1
+docopt==0.6.2
+ecdsa==0.13
+eth-abi==1.2.2
+eth-account==0.3.0
+eth-hash==0.2.0
+eth-keyfile==0.5.1
+eth-keys==0.2.0b3
+eth-rlp==0.1.2
+eth-typing==1.3.0
+eth-utils==1.2.2
 Flask==1.0.2
-requests==2.20.0
-Flask_Cors==3.0.6
-json_rpc==1.11.1
+Flask-Cors==3.0.6
+hexbytes==0.1.0
+idna==2.7
+itsdangerous==1.1.0
+Jinja2==2.10
+json-rpc==1.11.1
 jsonrpc==1.2
-py_solc==3.2.0
-Flask==1.0.2
-web3==4.8.1
+lru-dict==1.1.6
+MarkupSafe==1.1.0
 marshmallow==2.16.3
+mnemonic==0.18
+parsimonious==0.8.1
+pbkdf2==1.3
+pipreqs==0.4.9
+psycopg2==2.7.6.1
+py-solc==3.2.0
+pycryptodome==3.7.0
+pypiwin32==223
+pywin32==224
+requests==2.20.0
+rlp==1.0.3
+semantic-version==2.6.0
+six==1.11.0
+toolz==0.9.0
+urllib3==1.24.1
+web3==4.8.1
+websockets==6.0
+Werkzeug==0.14.1
+yarg==0.1.9
