--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+asn1crypto==0.24.0
 attrdict==2.0.0
 base58==1.0.2
 certifi==2018.10.15
+cffi==1.11.5
 chardet==3.0.4
 Click==7.0
+cryptography==2.4.2
 cytoolz==0.9.0.1
 docopt==0.6.2
 ecdsa==0.13
@@ -31,6 +34,7 @@ pbkdf2==1.3
 pipreqs==0.4.9
 psycopg2==2.7.6.1
 py-solc==3.2.0
+pycparser==2.19
 pycryptodome==3.7.0
 requests==2.20.0
 rlp==1.0.3
@@ -42,4 +46,3 @@ web3==4.8.1
 websockets==6.0
 Werkzeug==0.14.1
 yarg==0.1.9
-cryptography
