--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,8 @@ eth-typing==1.3.0
 eth-utils==1.2.2
 Flask==1.0.2
 Flask-Cors==3.0.6
+Flask-Redis==0.3.0
+Flask-SQLAlchemy==2.3.2
 hexbytes==0.1.0
 idna==2.7
 itsdangerous==1.1.0
@@ -36,15 +38,16 @@ psycopg2==2.7.6.1
 py-solc==3.2.0
 pycparser==2.19
 pycryptodome==3.7.0
+PyMySQL==0.9.2
+redis==3.0.1
 requests==2.20.0
 rlp==1.0.3
 semantic-version==2.6.0
 six==1.11.0
+SQLAlchemy==1.2.14
 toolz==0.9.0
 urllib3==1.24.1
 web3==4.8.1
 websockets==6.0
 Werkzeug==0.14.1
 yarg==0.1.9
-
-
