--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
+aiohttp==3.5.4
+alembic==1.0.5
 asn1crypto==0.24.0
+async-timeout==3.0.1
+asyncio==3.4.3
 attrdict==2.0.0
+attrs==18.2.0
 base58==1.0.2
-certifi==2018.10.15
+certifi==2018.11.29
 cffi==1.11.5
 chardet==3.0.4
 Click==7.0
@@ -18,19 +23,25 @@ eth-rlp==0.1.2
 eth-typing==1.3.0
 eth-utils==1.2.2
 Flask==1.0.2
-Flask-Cors==3.0.6
+Flask-And-Redis==0.7
+Flask-Cors==3.0.7
 Flask-Redis==0.3.0
 Flask-SQLAlchemy==2.3.2
 hexbytes==0.1.0
-idna==2.7
+idna==2.8
+idna-ssl==1.1.0
+IPy==0.83
 itsdangerous==1.1.0
 Jinja2==2.10
 json-rpc==1.11.1
 jsonrpc==1.2
 lru-dict==1.1.6
+Mako==1.0.7
+Markdown==3.0.1
 MarkupSafe==1.1.0
 marshmallow==2.16.3
 mnemonic==0.18
+multidict==4.5.2
 parsimonious==0.8.1
 pbkdf2==1.3
 pipreqs==0.4.9
@@ -38,18 +49,21 @@ psycopg2==2.7.6.1
 py-solc==3.2.0
 pycparser==2.19
 pycryptodome==3.7.0
-PyMySQL==0.9.2
+PyMySQL==0.9.3
+pypiwin32==223
+python-dateutil==2.7.5
+python-editor==1.0.3
+pywin32==224
 redis==3.0.1
-requests==2.20.0
+requests==2.21.0
 rlp==1.0.3
 semantic-version==2.6.0
-six==1.11.0
-SQLAlchemy==1.2.14
+six==1.12.0
 toolz==0.9.0
+typing-extensions==3.7.2
 urllib3==1.24.1
-web3==4.8.1
+web3==4.8.2
 websockets==6.0
 Werkzeug==0.14.1
 yarg==0.1.9
-IPy==0.83
-
+yarl==1.3.0
